Playlist has been added
