# src/api/resources/playlist/index.js
@@ -1,0 +1,1 @@
+export { playlistRouter } from './playlist.router'
