# src/api/resources/song/song.controller.js
@@ -15,7 +15,7 @@ export default {
             if(error && error.details){
                 return res.status(400).json(error);
             }
-            const song = await Song.create(value);
+            const song = await Song.create(Object.assign({},value,{ artist: req.user._id }));
             return res.json(song);
         } catch(err){
             console.error(err);
@@ -28,7 +28,11 @@ export default {
             const {page, perPage} = req.query;
             const options = {
                 page: parseInt(page,10) || 1,
-                limit: parseInt(perPage, 10) || 10
+                limit: parseInt(perPage, 10) || 10,
+                populate: {
+                    path: 'artist',
+                    select: 'firstName lastName'
+                }
             }
             const songs = await Song.paginate({}, options);
             return res.json(songs);
@@ -41,7 +45,7 @@ export default {
     async findOne(req,res){
         try{
             const { id } = req.params;
-            const song = await Song.findById(id);
+            const song = await Song.findById(id).populate('artist', 'firstName lastName');
             if(!song){
                 return res.status(404).json({err: 'Could not find any songs'});
             }
